--- a/GuessIt/Base.lproj/Main.storyboard
+++ b/GuessIt/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="GuessIt" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,86 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="4" translatesAutoresizingMaskIntoConstraints="NO" id="DYJ-WB-g4T">
+                                <rect key="frame" x="486" y="551" width="94" height="29"/>
+                            </stepper>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Difficulty" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bdi-UC-Yhb">
+                                <rect key="frame" x="499" y="522" width="69" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="rtb-Vy-yLo"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Guess a number between" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Tu-Lm-Czw">
+                                <rect key="frame" x="20" y="20" width="548" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="P7P-Il-fLj"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1 and 10" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qdu-Yg-NHs">
+                                <rect key="frame" x="20" y="49" width="560" height="66"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="66" id="y9n-8z-ziA"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="42"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" clearButtonMode="unlessEditing" translatesAutoresizingMaskIntoConstraints="NO" id="0V2-Lo-rh0">
+                                <rect key="frame" x="252" y="140" width="97" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="97" id="xuM-60-Adu"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="guessInput:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="2PY-PP-Dpv"/>
+                                </connections>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fr7-1g-4fu">
+                                <rect key="frame" x="20" y="257" width="560" height="165"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="165" id="1iJ-Iz-xEM"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="DYJ-WB-g4T" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="0x0-v1-cCB"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="4Tu-Lm-Czw" secondAttribute="trailing" constant="12" id="16u-27-oNC"/>
+                            <constraint firstItem="Qdu-Yg-NHs" firstAttribute="leading" secondItem="Fr7-1g-4fu" secondAttribute="leading" id="57Z-bR-DS1"/>
+                            <constraint firstItem="DYJ-WB-g4T" firstAttribute="trailing" secondItem="Fr7-1g-4fu" secondAttribute="trailing" id="5gz-od-7Ph"/>
+                            <constraint firstItem="Fr7-1g-4fu" firstAttribute="trailing" secondItem="Qdu-Yg-NHs" secondAttribute="trailing" id="6Do-Au-pkw"/>
+                            <constraint firstItem="4Tu-Lm-Czw" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="B6v-P4-M19"/>
+                            <constraint firstItem="4Tu-Lm-Czw" firstAttribute="trailing" secondItem="Bdi-UC-Yhb" secondAttribute="trailing" id="F88-vc-Any"/>
+                            <constraint firstItem="4Tu-Lm-Czw" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="LLX-U2-rqv"/>
+                            <constraint firstItem="DYJ-WB-g4T" firstAttribute="centerX" secondItem="Bdi-UC-Yhb" secondAttribute="centerX" id="QTy-ww-38w"/>
+                            <constraint firstAttribute="bottom" secondItem="DYJ-WB-g4T" secondAttribute="bottom" constant="20" symbolic="YES" id="Y9r-9o-rwv"/>
+                            <constraint firstItem="Qdu-Yg-NHs" firstAttribute="top" secondItem="4Tu-Lm-Czw" secondAttribute="bottom" constant="8" symbolic="YES" id="bc4-xS-0dI"/>
+                            <constraint firstItem="0V2-Lo-rh0" firstAttribute="top" secondItem="Qdu-Yg-NHs" secondAttribute="bottom" constant="25" id="bdr-qw-4iP"/>
+                            <constraint firstItem="0V2-Lo-rh0" firstAttribute="centerX" secondItem="Qdu-Yg-NHs" secondAttribute="centerX" id="ksf-Nq-9lu"/>
+                            <constraint firstItem="Fr7-1g-4fu" firstAttribute="top" secondItem="0V2-Lo-rh0" secondAttribute="bottom" constant="87" id="qsk-EJ-sZS"/>
+                            <constraint firstItem="DYJ-WB-g4T" firstAttribute="top" secondItem="Bdi-UC-Yhb" secondAttribute="bottom" constant="8" symbolic="YES" id="quB-5W-NjZ"/>
+                            <constraint firstItem="4Tu-Lm-Czw" firstAttribute="leading" secondItem="Qdu-Yg-NHs" secondAttribute="leading" id="yvW-iQ-xCN"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="guessRangeLabel" destination="Qdu-Yg-NHs" id="PkW-mT-9co"/>
+                        <outlet property="messageToPlayer" destination="Fr7-1g-4fu" id="IzW-rX-unG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="305" y="387"/>
         </scene>
     </scenes>
 </document>
